# examples

./: cleanup.sh  examples.pro  examples.sln
FileEditor/: FileEditor.rc  FileEditor.uxf  editbox.h  element.h  fileeditor.pro  main.cpp  main.h  mainwin.cpp  mainwin.h  winclass.cpp  winclass.h  window.cpp
ac3dec/: a52_internal.h  a52dec.c  a52dec.cpp  audio_out.c  audio_out.h  audio_out_aif.c  audio_out_al.c  audio_out_float.c  audio_out_null.c  audio_out_oss.c  audio_out_peak.c  audio_out_solaris.c  audio_out_wav.c  audio_out_win.c  bit_allocate.cpp  bitstream.cpp  config.h  float2s16.c  imdct.cpp  parse.cpp
base64/: alpha.txt  base64.pro  main.cpp  main2.cpp
bgcolor/: bgcolor.pro  bgcolor.sln  bgcolor.vcproj  main.cpp  menubar.cpp  menubar.h  resource.h  resource.rc
bitmap/: bitmap.pro  bitmap.vcproj  main.cpp  resource.h  resource.rc
bzcat/: Bzcat.java  Makefile  bitstream.cpp  bitstream.h  block.cpp  block.h  bzcat.c  bzcat.cpp  bzcat.pro  bzcat.uxf  bzcat2.cpp  bzcat3.cpp  main.cpp  relnotes.ps.bz2  stream.cpp  stream.h  table.cpp  table.h  toolbox.cpp  toolbox.h
bzcat2/: main.cpp
cat/: cat.pro  cat.vcproj  main.cpp  options.cpp  options.h  toolbox.cpp  toolbox.h
cechat/: cechat.pro  cechat.rc  cechat.sln  cechat.vcproj  main.cpp  mainwin.cpp  mainwin.h  menubar.cpp  resource.h  toolbox.h
chatclient/: chatclient.pro  main.cpp  menubar.h  resource.h  resource.rc  toolbox.cpp
chess1/: about.cpp  board.cpp  board.h  book.cpp  book.h  chess.h  chess.rc  chess1.pro  chess1.sln  chess1.vcproj  color.cpp  color.h  colordlg.cpp  colordlg.h  create.cpp  defs.h  dialog.cpp  dialog.h  dsp.cpp  eval.cpp  globals.cpp  globals.h  gnuchess.h  hittest.cpp  hittest.h  init.cpp  initiali.cpp  initmenu.cpp  main.cpp  mainwin.cpp  mainwin.h  manual.cpp  manual.h  menubar.cpp  menubar.h  mswdsp.cpp  numdlg.cpp  palette.h  piece.cpp  promote.cpp  (+21 more)
chessvalid/: chessvalid.pro  game.cpp  game.h  main.cpp
cmdbar/: cechat.rc  cmdbar.vcproj  main.cpp
colorbtn/: colorbtn.pro  main.cpp
colorbtn2/: colorbtn2.pro  main.cpp
commctrl1/: commctrl1.pro  main.cpp
compress/: Makefile  accept.2.Z  accept.2.Z.md5  accept.2.md5  codify.cpp  codify2.cpp  codify3.cpp  compress.c  compress.cpp  compress.py  compress1.cpp  compress2.cpp  compress3.cpp  enwik9.Z.md5  enwik9.sum  extract.py  extractc.c  extractpp.cpp  format.odt  generator.h  hocus.dat.Z.md5  hocus.dat.sum  httpd-2.0.35.tar.Z.md5  httpd-2.0.35.tar.md5  keen1.tar.Z.sum  keen1.tar.sum  logo.c.Z.md5  logo.c.sum  lzw.cpp  lzw.py  mjkimage.c.Z.md5  mjkimage.c.md5  mo.m68.tar.Z.md5  mo.m68.tar.sum  mo.ns32.tar.Z.md5  mo.ns32.tar.md5  mo.sparc.tar.md5  mo.vax.tar.sum  mystl.h  press.c  (+19 more)
contimeout/: alarm.cpp  contimeout.pro  contimeout.vcproj  input.cpp  input.h  main.cpp
crc32/: Makefile  crc32.cpp  crc32.java  crc32_2.cpp  main.cpp
databands/: DataBands.rc  databands.sln  databands.vcproj  resource.h
etcube/: Makefile  cube2.cpp  etcube.raw  obj.cpp
exception/: main.cpp
extract_a52/: extract_a52.c  extract_a52.cpp  test.cpp
flac2wav/: SimpleDecodeFlacToWav.java  bitinput.cpp  bitinput.h  flac2wav.cpp  flac2wav.pro  flac2wav.py  flacplay.py  playwav.py  toolbox.cpp  toolbox.h
flipbook/: audio.cpp  flipbook.cpp  pl_mpeg.cpp  pl_mpeg.h  video.cpp
gif2bmp/: gif2bmp.cpp  gif2bmp.pro  main.cpp
gl/gltfviewer/: CMakeLists.txt
gl/gltfviewer/scripts/: compare-images.py
gl/gltfviewer/src/: GLFWHandle.hpp  ViewerApplication.cpp  ViewerApplication.hpp  cameras.cpp  cameras.hpp  gl_debug_output.cpp  glad.c  glfw.hpp  gltf.cpp  images.cpp  main.cpp  shaders.hpp
gl/gltfviewer/src/utils/: gl_debug_output.cpp  glfw.hpp  images.cpp  images.hpp  shaders.hpp
glballgame/: main.cpp
gltexture/: test.c  texture.raw
golang/: sockserver.go
grep/: main.cpp
gzcat/: GZcat.java  Gzcat.java  GzipDecompress.java  Makefile  gzcat.cpp  main.bak  main.cpp  main.cpp.bak2
hilo/: hilo.pro
jpg2tga/: jpg2tga.pro  main.cpp  picojpeg.cpp  stb_image.cpp  stb_image.h
json/: Makefile  cockpit.gltf  cockpit2.gltf  cockpit3.gltf  example1.json  example2.json  json.cpp  json.h  main.cpp  michelle.json  minify.cpp  onzin.gltf  test1.json  test2.json  test5.json  test6.json
ls/: ls.pro  main.cpp  toolbox.cpp  toolbox.h
lsq/: lsq.pro  main.cpp  toolbox.cpp  toolbox.h
md5sum/: Makefile  chunk.cpp  chunk.h  hash.cpp  hash.h  hasher.cpp  hasher.h  main.cpp  md5sum.pro  md5sum.py  md5sum.vcproj  md5sumc.c  md5sumc.cpp  md5sumpp.cpp  test.cpp  toolbox.cpp  toolbox.h
mdiapp/: element.cpp  element.h  main.cpp  main.h  mainwin.cpp  mainwin.h  mdi_unit.h  mdiapp.pro  statusbar.cpp  toolbar.cpp  toolbar.h  winclass.cpp  winclass.h
memdc/: MemDcUsage.cpp  MemDcUsage.h  main.cpp  memdc.pro  memdc.sln  memdc.vcproj
minilang/: ast.h  interpreter.h  main.cpp  minilang.pro  (+3 more)
(+528 files in other folders)
